changed folder structure

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ a:hover{
     justify-content: space-between;
 }
 .home-img{
-    background-image: url("public/_DSC9094.jpg");
+    background-image: url("_DSC9094.jpg");
     background-size: cover;
     background-position: center;
 }
@@ -225,7 +225,7 @@ a:hover{
     margin: 8vh 0;
 }
 .timeline-img{
-    background-image: url(public/_DSC7412.jpg);
+    background-image: url(_DSC7412.jpg);
     height: 70vh;
     width: 30vw;
     background-position: center;
@@ -310,16 +310,16 @@ a:hover{
     background-position: center;
 }
 .gallery-img:nth-child(1){
-    background-image: url(public/_DSC7585.jpg);
+    background-image: url(_DSC7585.jpg);
     background-position-x: right;
 }
 .gallery-img:nth-child(3){
-    background-image: url(public/_DSC7922.jpg);
+    background-image: url(_DSC7922.jpg);
 }
 .gallery-img:nth-child(2){
     background-position: center;
     background-size: 140%;
-    background-image: url(public/_DSC9124.jpg);
+    background-image: url(_DSC9124.jpg);
 }
 @media (max-width:1000px){
     .gallery{
@@ -363,7 +363,7 @@ a:hover{
 .hands{
     height: 120vh;
     width: 100%;
-    background-image: url(public/_DSC8362.jpg);
+    background-image: url(_DSC8362.jpg);
     background-size: contain;
     background-position: center center;
     background-attachment: fixed;
