changed church pic

--- a/style.css
+++ b/style.css
@@ -179,7 +179,7 @@ a:hover{
     justify-content: space-between;
 }
 .home-img{
-    background-image: url("_DSC9094.jpg");
+    background-image: url("three kings.jpg");
     background-size: cover;
     background-position: center;
 }
